--- a/style.css
+++ b/style.css
@@ -91,9 +91,7 @@ header{
     font-weight: 500;
 }
 
-.header-btn .signup{
 
-}
 
 .header-btn .signin{
     background: #474fa0;
@@ -120,15 +118,18 @@ header{
 }
 
 .text h1{
-    font-size: 3.5rem;
+    font-size: 4.5rem;
     letter-spacing: 2px;
+    margin-top: -120px;
 }
 
 .text span{
+    
     color: var(--main-color);
 }
 
 .text p{
+    
     margin: 0.5rem 0 1rem;
 }
 
@@ -485,7 +486,7 @@ header{
     }
     header .navbar{
         position: absolute;
-        top: 100%;
+        top: -500px;
         left: 0;
         right: 0;
         display: flex;
@@ -494,6 +495,10 @@ header{
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
         transition: 0.2s ease;
         text-align: left;
+    }
+
+    .navbar.active{
+        top: 100%;
     }
 
     .navbar a{
@@ -511,4 +516,61 @@ header{
     .navbar a::after{
         display: none;
     }
+
+    .heading span{
+        font-size: 0.9rem;
+        font-weight: 600;
+    }
+
+    .heading h1{
+        font-size: 1.5rem;
+    }
+
+    .about-container{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-img{
+        padding: 1rem;
+        order: 2;
+    }
+
+
 }
+
+@media (max-width: 557px){
+    .copyright{
+        flex-direction: column;
+    }
+    .newsletter .box{
+        width: 284px;
+    }
+
+}
+
+@media (max-width: 355px) {
+    header {
+        padding: 6px 14px;
+    }
+    .logo img{
+        width: 30px;
+    }
+    section{
+        padding: 50px 14px;
+    }
+    .header-btn .signin{
+        padding: 7px 10px;
+        font-size: 14px;
+        font-weight: 400;
+    }
+    .text h1{
+        font-size: 2rem;
+    }
+    .form-container{
+        padding-top: 2rem;
+    }
+    .services_container{
+        grid-template-columns: repeat(auto-fit,minmax(254px,auto));
+    }
+}
+
